--- a/views/socket.html
+++ b/views/socket.html
@@ -2,42 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>WebSocket</title>
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        #mess {
-            text-align: center
-        }
-
-        .value {
-            width: 200px;
-            height: 200px;
-            border: 1px solid;
-            text-align: center;
-            line-height: 200px;
-            display: inline-block;
-        }
-
-        .box {
-            text-align: center;
-            margin-top: 200px;
+        body{
+            width: 96%;
+            margin-left: 2%;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-<div id="mess">正在连接...</div>
-<div class="box">
-    <div class="value" id="value1">OPPO R9</div>
-    <div class="value" id="value2">VIVO X9</div>
-    <div class="value" id="value3">IPHONE8 PLUS</div>
+<div class="btn-group box" role="group" aria-label="...">
+    <button type="button" class="btn btn-default">Oppo</button>
+    <button type="button" class="btn btn-default">Vivo</button>
+    <button type="button" class="btn btn-default">Apple</button>
+</div>
+<div class="page-header">
+    <h5 class="info">服务器返回信息列表:</br></br></h5>
 </div>
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script>
     if (window.WebSocket) {
         var ws = new WebSocket('ws://127.0.0.1:8001');
 
         ws.onopen = function () {
-            console.log('连接服务器成功');
+            console.log('连接服务器成功!');
             ws.send('startting...');
         }
         ws.onclose = function () {
@@ -51,7 +45,7 @@
             document.querySelector(".box").onclick = function (e) {
                 ws.send('当前点击框的内容为:<font style="color:red;" >' + e.target.innerHTML+'</font>');
             }
-            $('#mess').append(e.data + '</br>');
+            $('.info').append(e.data + '</br></br>');
         }
     }
 </script>
